<resources>
    <string name="app_name">asynchronocity</string>
    <string name="hello_world_async">Hello world, Async Task!</string>
    <string name="loader_press_text">Press to add text to list</string>
    <string name="application_not_responding_text">Press for Application Not Responding</string>
    <string name="thread_runnable_text">Press for Runnable Example</string>
    <string name="event_bus_text">Press for Event Bus Example</string>
    <string name="async_task_text">Press for AsyncTask Example</string>
    <string name="reactor_text">Press for RxJava Example</string>
    <string name="strict_text">Press for Strict Mode example</string>
    <string name="action_settings">Settings</string>
    <string name="press_me">Press me!</string>
    <string name="button_for_ui_work">Click this button to see ongoing work on the UI thread.</string>
    <string name="unblocked_toast_test">"This text indicates the UI thread is unblocked."</string>
    <string name="examples">Choose the example!</string>
</resources>
