<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity$PlaceholderFragment">

    <TextView
            android:id="@+id/application_not_responding_texbox"
            android:text="@string/application_not_responding_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/anr_button"
            android:layout_below="@+id/application_not_responding_texbox"
            android:text="@string/press_me"/>

    <Button
            android:padding="10dip"
            android:id="@+id/ui_work_button"
            android:text="@string/button_for_ui_work"
            android:layout_below="@+id/anr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>
