<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity$PlaceholderFragment">

    <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/loader_add_comment"/>

    <TextView
            android:text="@string/loader_press_text"
            android:layout_width="wrap_content"
            android:layout_below="@+id/loader_add_comment"
            android:id="@+id/loader_press_text"
            android:layout_height="wrap_content"/>

    <Button
            android:padding="10dip"
            android:id="@+id/loader_add_comment_button"
            android:text="@string/press_me"
            android:layout_below="@+id/loader_press_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/loader_add_comment_button"
              android:id="@+id/loader_show_comment"/>

    <Button
            android:padding="10dip"
            android:id="@+id/loader_ui_work"
            android:text="@string/button_for_ui_work"
            android:layout_below="@+id/loader_show_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>
